更新过期方法