@@ -1,18 +1,3 @@
-/**
- * Copyright 2018 人人开源 http://www.renren.io
- * <p>
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not
- * use this file except in compliance with the License. You may obtain a copy of
- * the License at
- * <p>
- * http://www.apache.org/licenses/LICENSE-2.0
- * <p>
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations under
- * the License.
- */
 package com.hsshy.beam.common.cloud;
 import com.hsshy.beam.common.exception.BeamException;
 import com.qcloud.cos.COSClient;
@@ -22,17 +7,10 @@ import com.qcloud.cos.sign.Credentials;
 import net.sf.json.JSONObject;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
-import sun.misc.BASE64Decoder;
-
 import java.io.IOException;
 import java.io.InputStream;
+import java.util.Base64;
 
-/**
- * 腾讯云存储
- * @author chenshun
- * @email sunlightcs@gmail.com
- * @date 2017-03-26 20:51
- */
 public class QcloudCloudStorageService extends CloudStorageService {
     private COSClient client;
 
@@ -61,8 +39,8 @@ public class QcloudCloudStorageService extends CloudStorageService {
             if (pic.indexOf("data:image/jpeg;base64") > -1 || pic.indexOf("data:image/png;base64") > -1){
                 pic = pic.substring(pic.indexOf(",") * 1 + 1, pic.length());
             }
-            BASE64Decoder decoder = new BASE64Decoder();
-            byte[] data = decoder.decodeBuffer(pic);
+            Base64.Decoder decoder = Base64.getDecoder();
+            byte[] data = decoder.decode(pic);
             for(int i=0;i<data.length;++i){
                 if(data[i]<0){ data[i]+=256; }
             }
